--- a/index.html
+++ b/index.html
@@ -3,26 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <title>Интернет-магазин</title>
 </head>
 <body>
+<div id="app">
 <header>
   <div class="header__top center">
-    <div class="header__logo">LOGO</div>
-    <button class="btn-cart" type="button" id="basket-btn">Корзина</button>
+    <div class="header__logo">интернет-магазин</div>
+      <div class="cart">
+      <form action="#" class="search-form">
+          <input type="text" class="search-field" v-model="searchLine">
+          <button class="btn-search" type="submit" @click="FilterGoods">
+              <i class="fas fa-search"></i>
+          </button>
+      </form>
+          <button class="btn-cart" type="button" @click="isVisible = !isVisible">Корзина</button>
+          <div class="cart-block" :class="divClasses">
+              <div class="product-cart-item ">
+                  <img :src="imgCatalogSmall" alt="Some img">
+                  <div class="desc">
+                      <h3 class="product-name">Название</h3>
+                      <p class="product-price">Цена</p>
+                  </div>
+                      <button class="by-btn" @click="">Купить</button>
+              </div>
+      </div>
     </div>
 </header>
 <main>
-    <div class="products center"></div>
-</main>
-<div id="goods-list-section" class="goods-list">
-    <div id="goods-list-section__modal">
-        <input type="submit" value="X" id="goods-list-section__delete">
-        <h3 id="goods-list_head-line">Корзина</h3>
-        <div id="goods-list__product-box"></div>
-        <p id="goods-list__total"></p>
+    <div class="products center">
+        <div class="product-item" v-for="product of filteredGoods" :key="product.id_product">
+            <img class="product-img" :src="imgCatalog" alt="Some img">
+                <h3 class="product-name">{{product.product_name}}</h3>
+                <p class="product-price">{{product.price}}₽</p>
+                <button class="by-btn" @click="addProduct(product)">Добавить в корзину</button>
+        </div>
     </div>
+</main>
 </div>
-<script src="./js/main.js"></script>
+
+<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
